[project]
name = "datacraft"
version = "0.1.0"
description = "A simple data cleaning, analysis, and visualization toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Kaushik Kumar", email = "kaushik@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/kksen18-collab/skeleton_package_project_datacraft"
"Bug Tracker" = "https://github.com/kksen18-collab/skeleton_package_project_datacraft/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
